--- a/index.html
+++ b/index.html
@@ -3,138 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Tracking App</title>
+    <title>Seguimiento de proyectos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Project Tracking Application</h1>
+        <h1>Aplicación de seguimiento de proyectos</h1>
     </header>
     <main>
         <div class="card">
-            <h2>Welcome to the Project Tracking App</h2>
-            <p>Please use the navigation menu to access different pages.</p>
+            <h2>Bienvenido al seguimiento de proyectos</h2>
+            <p>Utilice el menú de navegación para acceder a diferentes páginas.</p>
             <nav>
                 <ul>
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="create_person_account.html">Create Personal Account</a></li>
-                    <li><a href="create_company_account.html">Create Company Account</a></li>
-                    <li><a href="ticket_story.html">Ticket Story</a></li>
-                    <li><a href="history.html">History</a></li>
+                    <li><a href="login.html">Inicio de sesión</a></li>
+                    <li><a href="create_person_account.html">Crear Cuenta Personal</a></li>
+                    <li><a href="create_company_account.html">Asosiar empresa</a></li>
                 </ul>
             </nav>
         </div>
 
-        <!-- Example of one page setup -->
-        <!-- login.html -->
-        <div class="card">
-            <h2>Login</h2>
-            <form>
-                <label for="email">Email</label>
-                <input type="email" id="email" placeholder="Enter your email" required>
-
-                <label for="password">Password</label>
-                <input type="password" id="password" placeholder="Enter your password" required>
-
-                <button type="submit">Login</button>
-            </form>
-        </div>
-
-        <!-- create_person_account.html -->
-        <div class="card">
-            <h2>Create Personal Account</h2>
-            <form>
-                <label for="name">Name</label>
-                <input type="text" id="name" placeholder="Enter your name" required>
-
-                <label for="email">Email</label>
-                <input type="email" id="email" placeholder="Enter your email" required>
-
-                <label for="password">Password</label>
-                <input type="password" id="password" placeholder="Enter a password" required>
-                <small>Password must be at least 8 characters long and contain an uppercase letter.</small>
-
-                <button type="submit">Create Account</button>
-            </form>
-        </div>
-
-        <!-- create_company_account.html -->
-        <div class="card">
-            <h2>Create Company Account</h2>
-            <form>
-                <label for="company-name">Company Name</label>
-                <input type="text" id="company-name" placeholder="Enter company name" required>
-
-                <label for="nit">NIT</label>
-                <input type="text" id="nit" placeholder="Enter company NIT" required>
-
-                <label for="address">Address</label>
-                <input type="text" id="address" placeholder="Enter company address" required>
-
-                <label for="email">Email</label>
-                <input type="email" id="email" placeholder="Enter company email" required>
-
-                <button type="submit">Create Company</button>
-            </form>
-        </div>
-
-        <!-- ticket_story.html -->
-        <div class="card">
-            <h2>Ticket Story</h2>
-            <form>
-                <label for="company">Company</label>
-                <input type="text" id="company" placeholder="Enter company name" required>
-
-                <label for="details">Details</label>
-                <textarea id="details" placeholder="Describe the ticket" required></textarea>
-
-                <label for="status">Status</label>
-                <select id="status" required>
-                    <option value="in-progress">In Progress</option>
-                    <option value="completed">Completed</option>
-                </select>
-
-                <button type="submit">Submit Ticket</button>
-            </form>
-        </div>
-
-        <!-- history.html -->
-        <div class="card">
-            <h2>History</h2>
-            <form>
-                <label for="search">Search</label>
-                <input type="text" id="search" placeholder="Search by company or details">
-                <button type="button">Search</button>
-            </form>
-
-            <table>
-                <thead>
-                    <tr>
-                        <th>Company</th>
-                        <th>Details</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Company 1</td>
-                        <td>Ticket for feature X</td>
-                        <td>
-                            <button>Edit</button>
-                            <button>Delete</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Company 2</td>
-                        <td>Ticket for bug fix Y</td>
-                        <td>
-                            <button>Edit</button>
-                            <button>Delete</button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+        
     </main>
 </body>
 </html>
